Fixed error in hero image not fitting the screen.

--- a/src/stylesheets/components/home.scss
+++ b/src/stylesheets/components/home.scss
@@ -6,6 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background-size: cover;
     // background: #edd979;
     background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
     url("../grafitti.jpg");
@@ -15,6 +16,13 @@
 .background > * {
     position: absolute;
     z-index: 150;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .hello {
@@ -43,4 +51,3 @@
     align-self: center;
     margin-top: auto;
 }
-
