--- a/src/stylesheets/components/posts.scss
+++ b/src/stylesheets/components/posts.scss
@@ -15,9 +15,10 @@
 
 .robo {
     font-family: 'Roboto', sans-serif;
-    color: #1874cd;
+    color: rgb(58, 58, 243);
 }
 
 .cato {
     font-family: 'Roboto', sans-serif;
+    color: purple;
 }
